--- a/MarkdownHere/domes/MarkdownHere.html
+++ b/MarkdownHere/domes/MarkdownHere.html
@@ -13,6 +13,7 @@
                 <div class="span6">
                     <h4 class="livedemo-elem-title">编辑</h4>
                     <div class="livedemo-raw livedemo-elem">
+                        <noscript># hidden</noscript>
                     <textarea></textarea>
                     </div>
                 </div>
