--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
     <title>WP-ReliableMD Demo</title>
     <script type="text/javascript" src="config.js.php"></script>
     <script type="text/javascript" src="MarkdownHere/vendor/jquery-3.2.1.slim.min.js"></script>
-    <script type="text/javascript" src="MarkdownHere/domes/demo.js"></script>
+    <script type="text/javascript" src="BackendEditor/mdeditor.js"></script>
     <script type="text/javascript">
 
     </script>
