--- a/BackendEditor/ReliableMD.html
+++ b/BackendEditor/ReliableMD.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="../bower_components/tui-chart/dist/tui-chart.css">
 
     <div id="editSection"></div>
-    <div style="text-align: right"><button>Submit</button></div>
+    <div style="text-align: right"><button id="submit">Submit</button></div>
     <script src="./js/WPReliableMD_Admin.js"></script>
 </div>
 </body>
