--- a/BackendEditor/ReliableMD.html
+++ b/BackendEditor/ReliableMD.html
@@ -31,7 +31,7 @@
 
     <div id="editSection"></div>
     <div style="text-align: right"><button id="submit">Submit</button></div>
-    <script src="./js/WPReliableMD_Admin.js"></script>
+    <script src="./js/ReliableMD.js"></script>
 </div>
 </body>
 </html>
