--- a/Demos/ReliableMD.html
+++ b/Demos/ReliableMD.html
@@ -6,6 +6,7 @@
     <title>ReilableMD editor</title>
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../js/frontend-render.js"></script>
+    <script>document.write(tui_scripts_and_styles);</script>
 </head>
 <body>
 <div class="explain" style="margin-top: 1em;">
