--- a/Demos/ReliableMD.html
+++ b/Demos/ReliableMD.html
@@ -89,23 +89,24 @@ Make your pull request, then describe your changes.
 #### Title
 Follow other PR title format on below.
 ```
-<Type>: Short Description (fix #111)
+    <Type>: Short Description (fix #111)
     <Type>: Short Description (fix #123, #111, #122)
-        <Type>: Short Description (ref #111)
-            ```
-            * capitalize first letter of Type
-            * use present tense: 'change' not 'changed' or 'changes'
+    <Type>: Short Description (ref #111)
+```
+    * capitalize first letter of Type
+    * use present tense: 'change' not 'changed' or 'changes'
 
-            #### Description
-            If it has related to issues, add links to the issues(like `#123`) in the description.
-            Fill in the [Pull Request Template](./docs/PULL_REQUEST_TEMPLATE.md) by check your case.
+#### Description
+If it has related to issues, add links to the issues(like `#123`) in the description.
+Fill in the [Pull Request Template](./docs/PULL_REQUEST_TEMPLATE.md) by check your case.
+## Code of Conduct
 
-            ## Code of Conduct
-            This project and everyone participating in it is governed by the [Code of Conduct](CODE_OF_CONDUCT.md). By participating, you are expected to uphold this code. Please report unacceptable behavior to dl_javascript@nhnent.com.
+This project and everyone participating in it is governed by the [Code of Conduct](CODE_OF_CONDUCT.md). By participating, you are expected to uphold this code. Please report unacceptable behavior to dl_javascript@nhnent.com.
 
-            > This Guide is base on [atom contributing guide](https://github.com/atom/atom/blob/master/CONTRIBUTING.md), [CocoaPods](http://guides.cocoapods.org/contributing/contribute-to-cocoapods.html) and [ESLint](http://eslint.org/docs/developer-guide/contributing/pull-requests)
+> This Guide is base on [atom contributing guide](https://github.com/atom/atom/blob/master/CONTRIBUTING.md), [CocoaPods](http://guides.cocoapods.org/contributing/contribute-to-cocoapods.html) and [ESLint](http://eslint.org/docs/developer-guide/contributing/pull-requests)
 
-            [demo]:https://nhnent.github.io/tui.editor/</div>
+[demo]:https://nhnent.github.io/tui.editor/
+</div>
 
 </div>
 </body>
