--- a/Demos/ReliableMD.html
+++ b/Demos/ReliableMD.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>ReilableMD editor</title>
     <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../js/frontend-render.js"></script>
+    <script src="../js/WPReliableMD_render.js"></script>
     <script>document.write(tui_scripts_and_styles);</script>
 </head>
 <body>
@@ -70,27 +70,6 @@ y.suffix: $
 legend.visible: false
 ```
 
-# UML
-
-```uml
-class BaseClass
-
-namespace net.dummy #DDDDDD {
-.BaseClass <|-- Person
-Meeting o-- Person
-
-.BaseClass <|- Meeting
-}
-
-namespace net.foo {
-net.dummy.Person  <|- Person
-.BaseClass <|-- Person
-
-net.dummy.Meeting o-- Person
-}
-
-BaseClass <|-- net.unused.Person
-```
 </div>
 
 </div>
