--- a/Demos/ReliableMD.html
+++ b/Demos/ReliableMD.html
@@ -70,6 +70,27 @@ y.suffix: $
 legend.visible: false
 ```
 
+# UML
+
+```uml
+class BaseClass
+
+namespace net.dummy #DDDDDD {
+.BaseClass <|-- Person
+Meeting o-- Person
+
+.BaseClass <|- Meeting
+}
+
+namespace net.foo {
+net.dummy.Person  <|- Person
+.BaseClass <|-- Person
+
+net.dummy.Meeting o-- Person
+}
+
+BaseClass <|-- net.unused.Person
+```
 </div>
 
 </div>
