--- a/Demos/ReliableMD.html
+++ b/Demos/ReliableMD.html
@@ -22,7 +22,10 @@
 #### Heading 4
 ##### Heading 5
 ###### Heading 6
-code block
+$$f(x)=x^2 block$$
+
+test$f_2(x)=2^{f(x)}$inline
+    code block
 ```js
 console.log("fenced code block");
 ```
