--- a/Demos/ReliableMD.html
+++ b/Demos/ReliableMD.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <title>ReilableMD editor</title>
     <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../js/WPReliableMD_render.js"></script>
-    <script>document.write(tui_scripts_and_styles);</script>
+    <!--<script src="../js/WPReliableMD_render.js"></script>-->
+    <!--<script>document.write(tui_scripts_and_styles);</script>-->
+    <srcipt src="../js/TuiEditorMathSupport.js?ver=1.0"></srcipt>
 </head>
 <body>
-<div class="explain" style="margin-top: 1em;">
-    <!--<h1>Input your text here</h1>-->
-</div>
 <div class="code-html">
     <div class="markdown">
 ![image](https://cloud.githubusercontent.com/assets/389021/16107646/9729e556-33d8-11e6-933f-5b09fa3a53bb.png)
