--- a/Demos/ReliableMD.html
+++ b/Demos/ReliableMD.html
@@ -4,10 +4,11 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>ReilableMD editor</title>
+    <script src="../bower_components/requirejs/require.js"></script>
     <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <!--<script src="../js/WPReliableMD_render.js"></script>-->
-    <!--<script>document.write(tui_scripts_and_styles);</script>-->
-    <srcipt src="../js/TuiEditorMathSupport.js?ver=1.0"></srcipt>
+    <script src="../js/WPReliableMD_render.js"></script>
+    <script>document.write(tui_scripts_and_styles);</script>
+    <script src="../js/TuiEditorMathSupport.js?ver=1.0"></script>
 </head>
 <body>
 <div class="code-html">
