--- a/Demos/ReliableMD.html
+++ b/Demos/ReliableMD.html
@@ -4,11 +4,28 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>ReilableMD editor</title>
-    <script src="../js/require.js"></script>
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../js/WPReliableMD_render.js"></script>
-    <script>document.write(tui_scripts_and_styles);</script>
-    <!--<script src="../js/TuiEditorMathSupport.js"></script>-->
+    <script data-main="../js/app.js" src="../js/require.js"></script>
+    <!--<script src="../bower_components/jquery/dist/jquery.js"></script>-->
+    <!--<script src="../bower_components/markdown-it/dist/markdown-it.js"></script>-->
+    <!--<script src="../bower_components/to-mark/dist/to-mark.js"></script>-->
+    <!--<script src="../bower_components/tui-code-snippet/dist/tui-code-snippet.js"></script>-->
+    <!--<script src="../bower_components/tui-color-picker/dist/tui-color-picker.js"></script>-->
+    <!--<script src="../bower_components/codemirror/lib/codemirror.js"></script>-->
+    <!--<script src="../bower_components/highlightjs/highlight.pack.js"></script>-->
+    <!--<script src="../bower_components/squire-rte/build/squire-raw.js"></script>-->
+    <!--<link rel="stylesheet" href="../bower_components/codemirror/lib/codemirror.css">-->
+    <!--<link rel="stylesheet" href="../bower_components/highlightjs/styles/github.css">-->
+    <!--<script src="../bower_components/plantuml-encoder/dist/plantuml-encoder.js"></script>-->
+    <!--<script src="../bower_components/raphael/raphael.js"></script>-->
+    <!--<script src="../bower_components/tui-chart/dist/tui-chart.js"></script>-->
+    <!--<script src="../bower_components/tui-editor/dist/tui-editor-Editor-all.js"></script>-->
+    <!--<link rel="stylesheet" href="../bower_components/tui-editor/dist/tui-editor.css">-->
+    <!--<link rel="stylesheet" href="../bower_components/tui-editor/dist/tui-editor-contents.css">-->
+    <!--<link rel="stylesheet" href="../bower_components/tui-color-picker/dist/tui-color-picker.css">-->
+    <!--<link rel="stylesheet" href="../bower_components/tui-editor.css">-->
+    <!--<link rel="stylesheet" href="../bower_components/katex/dist/katex.css">-->
+    <!--<script src="../bower_components/katex/dist/katex.js"></script>-->
+    <!--<script src="../js/WPReliableMD_render.js"></script>-->
 </head>
 <body>
 <div class="code-html">
