--- a/Demos/ReliableMD.html
+++ b/Demos/ReliableMD.html
@@ -6,18 +6,13 @@
     <title>ReilableMD editor</title>
     <script src="../js/require.js"></script>
     <script src="../js/require_paths.js"></script>
-    <!--<script src="../js/WPReliableMD_render.js"></script>-->
-    <!--<link rel="stylesheet" href="../bower_components/codemirror/lib/codemirror.css">-->
-    <!--<link rel="stylesheet" href="../bower_components/highlightjs/styles/github.css">-->
-    <!--<link rel="stylesheet" href="../bower_components/tui-editor/dist/tui-editor.css">-->
-    <!--<link rel="stylesheet" href="../bower_components/tui-editor/dist/tui-editor-contents.css">-->
-    <!--<link rel="stylesheet" href="../bower_components/tui-color-picker/dist/tui-color-picker.css">-->
-    <!--<link rel="stylesheet" href="../bower_components/katex/dist/katex.css">-->
-    <script>
-        requirejs(['raphael', 'katex'], function (r, k) {
-            console.log(r, k);
-        })
-    </script>
+    <script src="../js/WPReliableMD_render.js"></script>
+    <link rel="stylesheet" href="../bower_components/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="../bower_components/highlightjs/styles/github.css">
+    <link rel="stylesheet" href="../bower_components/tui-editor/dist/tui-editor.css">
+    <link rel="stylesheet" href="../bower_components/tui-editor/dist/tui-editor-contents.css">
+    <link rel="stylesheet" href="../bower_components/tui-color-picker/dist/tui-color-picker.css">
+    <link rel="stylesheet" href="../bower_components/katex/dist/katex.css">
 </head>
 <body>
 <div class="code-html">
