--- a/Demos/ReliableMD.html
+++ b/Demos/ReliableMD.html
@@ -12,9 +12,15 @@
     <link rel="stylesheet" href="../bower_components/tui-editor/dist/tui-editor.css">
     <link rel="stylesheet" href="../bower_components/tui-editor/dist/tui-editor-contents.css">
     <link rel="stylesheet" href="../bower_components/tui-color-picker/dist/tui-color-picker.css">
+    <link rel="stylesheet" href="../bower_components/tui-chart/dist/tui-chart.css">
     <link rel="stylesheet" href="../bower_components/katex/dist/katex.css">
 </head>
 <body>
+<script>
+    requirejs(['highlight.js'], function (js) {
+       console.log(js);
+    });
+</script>
 <div class="code-html">
     <div class="markdown">
 ![image](https://cloud.githubusercontent.com/assets/389021/16107646/9729e556-33d8-11e6-933f-5b09fa3a53bb.png)
