--- a/Demos/ReliableMD.html
+++ b/Demos/ReliableMD.html
@@ -6,7 +6,7 @@
     <title>ReilableMD editor</title>
     <script src="../js/require.js"></script>
     <script src="../js/require_paths.js"></script>
-    <script>requirejs(['ReliableMD_render'], function(r){console.log(r)});</script>
+    <script src="../js/WPReliableMDFrontend.js"></script>
     <link rel="stylesheet" href="../bower_components/codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="../bower_components/highlightjs/styles/github.css">
     <link rel="stylesheet" href="../bower_components/tui-editor/dist/tui-editor.css">
